<resources>
    <string name="app_name">PeopleNearby</string>
    <string name="google_map_key" translatable="false">AIzaSyAooxlSmJjEa5rHL3BcFD6FxZC5-u1fB3k</string>
    <string name="google_web_key" translatable="false">AIzaSyAdvBsMAaOMnzRC21wiSXWehbPSphcNUqE</string>


    <string name="onStartWait">Please wait while we connect you&#8230;</string>
    <string name="loginButton">Login</string>
    <string name="email_hint">Email</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="person_name">Name</string>
    <string name="age">Age</string>
    <string name="create_account">Create Account</string>
    <string name="already_member">Already a member? Login</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender  </string>
    <string name="confirmation_page">Confirmation Page</string>
    <string name="destinaton">Destination</string>
    <string name="address">Address</string>
    <string name="confirm">Confirm</string>
    <string name="setTime">Set a Time</string>
    <string name="sent">Request Sent</string>
    <string name="received">Request Received</string>
    <string name="nothingToShow">Sorry there are no requests to be shown at this moment.</string>

    <string name="appointments">My Appointments</string>
    <string name="pending">Pending</string>
    <string name="trackFriend">Track Friend</string>
    <string name="acceptReject">Accept/Reject</string>
</resources>
